force-app/main/default/objects/DaysOff_Project__c/DaysOff_Project__c.object-meta.xml
<CustomObject>
    <label>DaysOff-Project</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>DaysOff-Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DaysOff-Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>