force-app/main/default/objects/DaysOff_Project__c/fields/Days_Off_Request__c.field-meta.xml
<CustomField>
    <fullName>Days_Off_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Days Off Request</label>
    <referenceTo>Days_Off_Request__c</referenceTo>
    <relationshipLabel>*DaysOff-Projects</relationshipLabel>
    <relationshipName>DaysOff_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>