force-app/main/default/objects/DaysOff_Project__c/fields/DaysOffRequest__c.field-meta.xml
<CustomField>
    <fullName>DaysOffRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DaysOffRequest</label>
    <referenceTo>DaysOffRequest__c</referenceTo>
    <relationshipLabel>DaysOff-Projects</relationshipLabel>
    <relationshipName>DaysOff_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>